derive_everything/tests/fail/struct.rs
use derive_everything::derive_everything;

#[derive_everything]
struct NotOrd(f64);

fn main() {}
